[package]
name = "iap-jwt"
version = "0.3.0"
edition = "2021"
description = "Validate and decode Google Cloud Identity-Aware Proxy (IAP) JWTs"
readme = "README.md"
repository = "https://github.com/ryo33/iap-jwt"
license = "MIT OR Apache-2.0"
keywords = ["google", "iap", "jwk", "jwt"]
categories = ["authentication"]

[dependencies]
jsonwebtoken = "10"
reqwest = { version = "0.12", features = ["json"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["reqwest", "rust_crypto"]
aws_lc_rs = ["jsonwebtoken/aws_lc_rs"]
reqwest = ["dep:reqwest"]
rust_crypto = ["jsonwebtoken/rust_crypto"]
